# static_vector

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  tests.cpp
include/palotasb/: static_vector.hpp
